--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
 <section id="theme">
 	<br><br>
 				
-		<marquee behavior="scroll"  direction="left" onMouseOver="this.stop()" onMouseOut="this.start()"><h4><font color="GREEN" style="font-size: 18px">Authors are requested to submit full length paper online through <a href="https://easychair.org/conferences/?conf=ic4e2020">Easychair link</a></font></h4></marquee><br><br>
-				
+		<marquee behavior="scroll"  direction="left" onMouseOver="this.stop()" onMouseOut="this.start()"><h4><font color="GREEN" style="font-size: 18px">Authors are requested to submit full length paper online through <a href="https://easychair.org/conferences/?conf=ic4e2020">Easychair link</a></font></h4></marquee><br>
+			<marquee behavior="scroll"  direction="left" onMouseOver="this.stop()" onMouseOut="this.start()"><h4><font color="GREEN" style="font-size: 18px">Due to several requests from the participants, we are pleased to announce that the IC4E-2020 full paper submission deadline has been extended to 15  July 2020.</font></h4></marquee><br><br>
 			</section>
 		<section>
 			<div class="welcome cf">
