--- a/index.html
+++ b/index.html
@@ -154,10 +154,11 @@ Submit your research paper to IC4E-2020 through the Online Submission System .<b
 ⦁	Nano Communication Networks - Journal - Elsevier (SCI Indexed IF 2.25) <br><br>
 ⦁	International Journal of Intelligence and Sustainable Computing, Inderscience <br><br></p>
 	</div>
-  
   <div class="column">
 		<center><h1 style="color:red">KEYDATES</h1></center>
-		<p style="font-size: 18px;font-family:soin sans Constantia, Lucida Bright, DejaVu Serif, Georgia, serif;line-height: 1.8"><br><br>➡ Initial Paper Submission:<b style="color: red"> 30 June 2020</b><br><br> 
+		<p style="font-size: 18px;font-family:soin sans Constantia, Lucida Bright, DejaVu Serif, Georgia, serif;line-height: 1.8"><br><br>➡ <del style="color: black">Initial Paper Submission:<b style="color: red"> 30 June 2020</b></del><br>
+		➡ Full paper submission deadline extended:<b style="color: red"> 15  July 2020</b>
+<br><br> 
  ➡ Decision Notification: <b style="color: red">31 August 2020</b><br><br>
  ➡ Final Submission:<b style="color: red"> 15 September 2020</b><br><br>
 ➡ Registration Deadline:<b style="color: red"> 15 September 2020</b></p>
