--- a/keydates.html
+++ b/keydates.html
@@ -98,9 +98,7 @@
 								    </tr>
 								    <tr>
 								      <th class="name" scope="row"><font color="#010101"margin-left="5%" style="font-family: soin sans Constantia, Lucida Bright, DejaVu Serif, Georgia, serif;font-size: 19px" ><p style="margin-left:5%;margin-right: 5%;line-height:1.8" align="justify" ><center>Full paper submission deadline extended</center></font></p></th>
-								      <td><font color="#010101"margin-left="5%" style="font-family: soin sans Constantia, Lucida Bright, DejaVu Serif, Georgia, serif;font-size: 19px" ><p style="margin-left:5%;margin-right: 5%;line-height:1.8" align="justify" ><center>15  July 2020
-
-</center></font></p></td>				      
+								      <td><font color="#010101"margin-left="5%" style="font-family: soin sans Constantia, Lucida Bright, DejaVu Serif, Georgia, serif;font-size: 19px" ><p style="margin-left:5%;margin-right: 5%;line-height:1.8" align="justify" ><center><del style="color: black">15  July 2020</del></center><br>30  July 2020</font></p></td>				      
 								      			      
 								     				      
 								    </tr>
