--- a/index.html
+++ b/index.html
@@ -111,7 +111,8 @@
 	<br><br>
 				
 		<marquee behavior="scroll"  direction="left" onMouseOver="this.stop()" onMouseOut="this.start()"><h4><font color="GREEN" style="font-size: 20px"><center>Authors are requested to submit full length paper online through <a href="https://easychair.org/conferences/?conf=ic4e2020">Easychair link</center></a></font></h4></marquee><br>
-			<marquee behavior="scroll"  direction="left" onMouseOver="this.stop()" onMouseOut="this.start()"><h4><font color="GREEN" style="font-size: 20px"><center></center>Due to several requests from the participants, we are pleased to announce that the IC4E-2020 full paper submission deadline has been extended to 15  July 2020.</center></font></h4></marquee><br><br>
+			<marquee behavior="scroll"  direction="left" onMouseOver="this.stop()" onMouseOut="this.start()"><h4><font color="GREEN" style="font-size: 20px"><center></center>Due to several requests from the participants, we are pleased to announce that the IC4E-2020 full paper submission deadline has been extended to 30  July 2020.</center></font></h4></marquee><br>
+			<marquee behavior="scroll"  direction="left" onMouseOver="this.stop()" onMouseOut="this.start()"><h4><font color="GREEN" style="font-size: 20px"><center></center>IC4E NOW IN VIRTUAL MODE</center></font></h4></marquee><br><br>	 
 			</section>
 		<section>
 			<div class="welcome cf">
@@ -163,7 +164,7 @@ Submit your research paper to IC4E-2020 through the Online Submission System .<b
   <div class="column">
 		<center><h1 style="color:red">KEYDATES</h1></center>
 		<p style="font-size: 18px;font-family:soin sans Constantia, Lucida Bright, DejaVu Serif, Georgia, serif;line-height: 1.8"><br><br>➡ <del style="color: black">Initial Paper Submission:<b style="color: red"> 30 June 2020</b></del><br>
-		➡ Full paper submission deadline extended:<b style="color: red"> 15  July 2020</b>
+		➡ Full paper submission deadline extended:<b style="color: red"> 30  July 2020</b>
 <br><br> 
  ➡ Decision Notification: <b style="color: red">31 August 2020</b><br><br>
  ➡ Final Submission:<b style="color: red"> 15 September 2020</b><br><br>
