--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ in Computing and Communication Engineering (IC4E-2020)</b> is to bring leading a
  and discuss the various prospective for the implementation of next generation electronic systems keeping in view that the technologies are environment friendly.
 
  <br><br><br>
- "Considering the situation arising out of the Covid-19 pandemic,the organising committee of the IC4E 2020 has decided to <b style="color: red;">make the conference fully virtual</b>. The decision aims to eliminate uncertainty and ensure the safety and health of the stakeholders in the event. Though registration fee is reduced, the event will be as comprehensive and committed to its goal as in- physical space events."
+ Considering the situation arising out of the Covid-19 pandemic,the organising committee of the IC4E 2020 has decided to <b style="color: red;">make the conference fully virtual</b>. The decision aims to eliminate uncertainty and ensure the safety and health of the stakeholders in the event. Though registration fee is reduced, the event will be as comprehensive and committed to its goal as in- physical space events.
  <br>
 
 </p></font>
